# zero2prod

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md
.cargo/: config.toml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
scripts/: healthcheck.sh  init-db.sh
src/: constants.rs  lib.rs  main.rs
tests/: healthcheck.rs
