[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Kurashige-Gollub <daniel@kurashige-gollub.de>"]
license = "MIT"
description = "Zero To Production In Rust: https://www.zero2prod.com/"
repository = "https://github.com/dgollub/zero0prod/"
# NOTE(dkg): it'll probably work with older versions as well, but this is what I have right now
rust-version = "1.69"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# NOTE(dkg): adjust linker to use the fastest available on each platform
# TODO(dkg): maybe check out `mold` linker

# On Windows
# ```
# cargo install -f cargo-binutils
# rustup component add llvm-tools-preview
# ```
[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "link-arg=fuse-ld=lld"]

[target.x86_64-pc-windows-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# On Linux
# - Ubuntu: `sudo apt-get install lld clang`
# - Arch: `sudo pacman -S lld clang`
[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

# On macOS: `brew install michaeleisel/zld/zld"
[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
